--- a/style.css
+++ b/style.css
@@ -727,8 +727,8 @@ img.hero {
 }
 
 .card2 {
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   transition: transform 0.1s ease;
   transform-style: preserve-3d;
