--- a/style.css
+++ b/style.css
@@ -702,7 +702,7 @@ img.hero {
 
 .card {
   width: 100%;
-  height: 1200;
+  height: 400px;
   object-fit: cover;
   transition: transform 0.1s ease;
   transform-style: preserve-3d;
