--- a/style.css
+++ b/style.css
@@ -672,8 +672,7 @@ li.card {
   border-radius: 1em;
   border: 1px solid transparent;
   padding: 30px;
-  align-items: center;
-  min-width: 350px;
+  width: 350px;
   min-height: 400px;
   margin-top: 40px;
   margin-bottom: 40px;
