--- a/style.css
+++ b/style.css
@@ -672,8 +672,8 @@ li.card {
   border-radius: 1em;
   border: 1px solid transparent;
   padding: 30px;
-  width: 350px;
-  min-height: 400px;
+  width: 450px;
+  min-height: 450px;
   margin-top: 40px;
   margin-bottom: 40px;
   margin-left: 20px;
@@ -700,8 +700,8 @@ img.hero {
 /* 3d */
 
 .card {
-  width: 100%;
-  height: 400px;
+  width: 450;
+  height: 450px;
   object-fit: cover;
   transition: transform 0.1s ease;
   transform-style: preserve-3d;
